--- a/src/i18n/locales/zh-CN.json
+++ b/src/i18n/locales/zh-CN.json
@@ -86,6 +86,8 @@
   },
   "errors": {
     "loadFormDetailsError": "加载表单详情失败",
-    "unknownError": "未知错误"
+    "unknownError": "未知错误",
+    "sessionExpired": "登录会话已过期",
+    "sessionExpiredDescription": "请检查禅道的会话ID (zentaoSid) 是否正确，或者重新登录禅道系统"
   }
 }
