:sparkles: support filter by project; update task detail to use table

--- a/src/i18n/locales/en-US.json
+++ b/src/i18n/locales/en-US.json
@@ -12,7 +12,9 @@
     "noTasksDescription": "Either you have no tasks assigned or there was an issue fetching them.",
     "connectedToZentao": "Connected to Zentao",
     "foundTasks": "Found {{count}} tasks",
-    "failedToFetchTasks": "Failed to fetch tasks"
+    "failedToFetchTasks": "Failed to fetch tasks",
+    "filterByProject": "Filter by Project",
+    "allProjects": "All Projects"
   },
   "taskActions": {
     "viewTaskDetails": "View Task Details",
