--- a/src/i18n/locales/en-US.json
+++ b/src/i18n/locales/en-US.json
@@ -6,7 +6,7 @@
     "submit": "Submit"
   },
   "taskList": {
-    "searchPlaceholder": "Search tasks by title, status, priority, or assignee...",
+    "searchPlaceholder": "Search tasks with fuzzy match & pinyin support (拼音搜索)",
     "myTasks": "My Tasks",
     "noTasksTitle": "No tasks found",
     "noTasksDescription": "Either you have no tasks assigned or there was an issue fetching them.",
