:sparkles: add bug detail

--- a/src/i18n/locales/en-US.json
+++ b/src/i18n/locales/en-US.json
@@ -148,6 +148,47 @@
     "taskDetailLoaded": "Task details updated",
     "loadTaskDetailFailed": "Failed to load task details"
   },
+  "bugDetails": {
+    "bugTitle": "Bug Details",
+    "activationInfo": "Activation Info",
+    "activationCount": "Activation Count",
+    "activationDate": "Activation Date",
+    "environmentInfo": "Environment Info",
+    "operatingSystem": "Operating System",
+    "browser": "Browser",
+    "reproductionSteps": "Reproduction Steps",
+    "steps": "[Steps]",
+    "result": "[Result]",
+    "expected": "[Expected]",
+    "stepsImage": "Steps Image",
+    "resultImage": "Result Image",
+    "expectedImage": "Expected Image",
+    "otherInfo": "Other Info",
+    "keywords": "Keywords",
+    "mailTo": "Mail To",
+    "notifyEmail": "Notify Email",
+    "bugId": "Bug ID",
+    "currentStatus": "Current Status",
+    "severity": "Severity",
+    "priority": "Priority",
+    "bugType": "Bug Type",
+    "product": "Product",
+    "assignedTo": "Assigned To",
+    "deadline": "Deadline",
+    "openInZentao": "Open in Zentao",
+    "viewBugDetails": "View Bug Details",
+    "copyBugId": "Copy Bug ID",
+    "copyBugUrl": "Copy Bug URL",
+    "copyBugTitle": "Copy Bug Title",
+    "copyInfo": "Copy Info",
+    "notSet": "Not Set",
+    "none": "None",
+    "loadingBugDetail": "Loading bug details...",
+    "pleaseWait": "Please wait",
+    "loadBugDetailSuccess": "Bug details loaded successfully",
+    "bugDetailLoaded": "Bug details updated",
+    "loadBugDetailFailed": "Failed to load bug details"
+  },
   "errors": {
     "loadFormDetailsError": "Failed to load form details",
     "unknownError": "Unknown error",
