--- a/src/i18n/locales/zh-CN.json
+++ b/src/i18n/locales/zh-CN.json
@@ -148,6 +148,47 @@
     "taskDetailLoaded": "任务详情已更新",
     "loadTaskDetailFailed": "加载任务详情失败"
   },
+  "bugDetails": {
+    "bugTitle": "Bug详情",
+    "activationInfo": "激活信息",
+    "activationCount": "激活次数",
+    "activationDate": "激活日期",
+    "environmentInfo": "环境信息",
+    "operatingSystem": "操作系统",
+    "browser": "浏览器",
+    "reproductionSteps": "重现步骤",
+    "steps": "[步骤]",
+    "result": "[结果]",
+    "expected": "[期望]",
+    "stepsImage": "步骤图片",
+    "resultImage": "结果图片",
+    "expectedImage": "期望图片",
+    "otherInfo": "其他信息",
+    "keywords": "关键词",
+    "mailTo": "抄送给",
+    "notifyEmail": "通知邮箱",
+    "bugId": "Bug ID",
+    "currentStatus": "当前状态",
+    "severity": "严重程度",
+    "priority": "优先级",
+    "bugType": "Bug类型",
+    "product": "所属产品",
+    "assignedTo": "指派给",
+    "deadline": "截止日期",
+    "openInZentao": "在禅道中打开",
+    "viewBugDetails": "查看Bug详情",
+    "copyBugId": "复制Bug ID",
+    "copyBugUrl": "复制Bug URL",
+    "copyBugTitle": "复制Bug标题",
+    "copyInfo": "复制信息",
+    "notSet": "未设置",
+    "none": "无",
+    "loadingBugDetail": "正在加载Bug详情...",
+    "pleaseWait": "请稍等",
+    "loadBugDetailSuccess": "Bug详情加载成功",
+    "bugDetailLoaded": "Bug详情已更新",
+    "loadBugDetailFailed": "加载Bug详情失败"
+  },
   "errors": {
     "loadFormDetailsError": "加载表单详情失败",
     "unknownError": "未知错误",
